Feat: Mobile and og description

--- a/index.html
+++ b/index.html
@@ -4,15 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="icon" href="assets/favicon.ico">
   <link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png">
+  <meta name="keywords" content="processado, cellbit, twitter">
+  <meta property="or:url" content="https://github.com/N3aar/Processado-pelo-Cellbit">
+  <meta property="og:title" content="Fui processado pelo Cellbit?">
+  <meta property="og:description" content="Verifque se sua conta do twitter é um das que foi processado pelo streamer Cellbit.">
+  <meta property="twitter:image" content="summary_large_image">
   <link rel="stylesheet" href="./style.css">
   <title>Processado pelo Cellbit</title>
 </head>
 <body>
   <header>
-    <a href="https://github.com/N3aar/i-was-sued" class="github"><i class="fa fa-github"></i></a>
+    <a href="https://github.com/N3aar/Processado-pelo-Cellbit" class="github"><i class="fa fa-github"></i></a>
   </header>
   <div class="container">
     <h1 class="title text">FUI PROCESSADO PELO CELLBIT?</h1>
