Feat: Show user account

--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
   <div class="container">
     <h1 class="title text">FUI PROCESSADO PELO CELLBIT?</h1>
     <input class="text" id="twitter" type="text" placeholder="DIGITE SEU @ DO TWITTER">
-    <p class="title text result hidden">FOI SIM! 👍</p>
+    <p class="title text result hidden">result</p>
+    <p class="text account invisible">@twitter</p>
+    <button class="text back hidden">VOLTAR</button>
     <audio class="audio-yes hidden" src="./assets/congratulations.ogg"></audio>
     <audio class="audio-no hidden" src="./assets/wrong.ogg"></audio>
-    <button class="text back hidden">VOLTAR</button>
   </div>
   <script src="./script.js"></script>
 </body>
