Feat: Add easteregg

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <button class="text back hidden">VOLTAR</button>
     <audio class="audio-yes hidden" src="./assets/congratulations.ogg"></audio>
     <audio class="audio-no hidden" src="./assets/wrong.ogg"></audio>
+    <audio class="audio-easteregg hidden" src="./assets/easteregg.ogg"></audio>
   </div>
   <script src="./script.js"></script>
 </body>
